backup_before_fair_regeneration_20260403_144618/output/codex-app-security-skill/cloudformation_002.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: EC2 security group with restricted egress and explicitly scoped ingress for SSH, HTTP, and HTTPS

Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: VPC where the security group will be created

  SecurityGroupName:
    Type: String
    Default: ec2-web-remote-access-sg
    AllowedPattern: '^[a-zA-Z0-9 ._\-/:#,@\[\]+=&;{}!$*]{1,255}$'
    Description: Name of the security group

  SSHIngressIpv4Cidr:
    Type: String
    Default: 0.0.0.0/0
    AllowedPattern: '^((25[0-5]|2[0-4][0-9]|1?[0-9]?[0-9])\.){3}(25[0-5]|2[0-4][0-9]|1?[0-9]?[0-9])\/([0-9]|[1-2][0-9]|3[0-2])$'
    Description: IPv4 CIDR permitted for SSH access

  HTTPIngressIpv4Cidr:
    Type: String
    Default: 0.0.0.0/0
    AllowedPattern: '^((25[0-5]|2[0-4][0-9]|1?[0-9]?[0-9])\.){3}(25[0-5]|2[0-4][0-9]|1?[0-9]?[0-9])\/([0-9]|[1-2][0-9]|3[0-2])$'
    Description: IPv4 CIDR permitted for HTTP access

  HTTPSIngressIpv4Cidr:
    Type: String
    Default: 0.0.0.0/0
    AllowedPattern: '^((25[0-5]|2[0-4][0-9]|1?[0-9]?[0-9])\.){3}(25[0-5]|2[0-4][0-9]|1?[0-9]?[0-9])\/([0-9]|[1-2][0-9]|3[0-2])$'
    Description: IPv4 CIDR permitted for HTTPS access

  SSHIngressIpv6Cidr:
    Type: String
    Default: ::/0
    AllowedPattern: '^(([0-9A-Fa-f]{1,4}:){1,7}[0-9A-Fa-f]{0,4}|::)\/([0-9]|[1-9][0-9]|1[0-1][0-9]|12[0-8])$'
    Description: IPv6 CIDR permitted for SSH access

  HTTPIngressIpv6Cidr:
    Type: String
    Default: ::/0
    AllowedPattern: '^(([0-9A-Fa-f]{1,4}:){1,7}[0-9A-Fa-f]{0,4}|::)\/([0-9]|[1-9][0-9]|1[0-1][0-9]|12[0-8])$'
    Description: IPv6 CIDR permitted for HTTP access

  HTTPSIngressIpv6Cidr:
    Type: String
    Default: ::/0
    AllowedPattern: '^(([0-9A-Fa-f]{1,4}:){1,7}[0-9A-Fa-f]{0,4}|::)\/([0-9]|[1-9][0-9]|1[0-1][0-9]|12[0-8])$'
    Description: IPv6 CIDR permitted for HTTPS access

Resources:
  EC2InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Ref SecurityGroupName
      GroupDescription: Allow SSH, HTTP, and HTTPS ingress with restricted outbound web traffic
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SSHIngressIpv4Cidr
          Description: SSH over IPv4
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIpv6: !Ref SSHIngressIpv6Cidr
          Description: SSH over IPv6
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref HTTPIngressIpv4Cidr
          Description: HTTP over IPv4
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIpv6: !Ref HTTPIngressIpv6Cidr
          Description: HTTP over IPv6
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref HTTPSIngressIpv4Cidr
          Description: HTTPS over IPv4
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIpv6: !Ref HTTPSIngressIpv6Cidr
          Description: HTTPS over IPv6
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
          Description: Outbound HTTP over IPv4
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
          Description: Outbound HTTPS over IPv4
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIpv6: ::/0
          Description: Outbound HTTP over IPv6
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIpv6: ::/0
          Description: Outbound HTTPS over IPv6
      Tags:
        - Key: Name
          Value: !Ref SecurityGroupName

Outputs:
  SecurityGroupId:
    Description: ID of the security group
    Value: !Ref EC2InstanceSecurityGroup

  SecurityGroupArnLikeReference:
    Description: Security group name
    Value: !Ref SecurityGroupName
